objects/ImportOpptyFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Column_Header__c</fullName>
        <description>Label name of the column header.</description>
        <label>Column Header</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConditionField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DisplayField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdCompareField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IdCompareField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InQueryCondition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InQueryCondition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInputField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInputField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ParentField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>This number will decide the display sequence of the display fields.</description>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SetValueWhileInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to set value for a particular field in the record.</description>
        <label>SetValueWhileInsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ImportOpptyFields</label>
</CustomObject>